client/scss/chatWindow.scss
#chat-window-header {
  display: flex;
  flex-direction: column;
  
  nav { 
    position: relative;
    width: 100%;
    background: #70774B;

    .chat-menu {
      justify-content: space-between;
      align-items: flex-start;
      padding: 0.5rem 0.5rem 0;
      color: white;

        .back-to-profile {
          margin-left: 0.5rem;
          font-size: 0.75rem;
        }

        .corresponding-user-info {
          padding: 0 2rem;
          display: flex;
          flex-direction: row;

          .chat-window-avatar {
            width: 3.5rem;
            height: 3.5rem;
            border-radius: 100%;
            padding: 0.5rem;
          }
      
          .chat-correspondent-name {
            margin-top: 2rem;
            font-size: 1rem;
            color: white;
            text-shadow: 2px 2px 2px #555;
            font-weight: 700;
          }
        }
    }

    .wave-spacer {
      position: absolute;
      z-index: -1;
      width: 100%;
      padding-top: 1.75rem;
      background: #70774B;
    }
    
    .chat-wave {
      position: absolute;
      width: 100%;
    }
  }

  header {
    display: flex;
    flex-direction: column;
    align-items: center;

    h3 {
      align-self: flex-start;
      color: white;
      text-shadow: 2px 2px 2px #555;
      margin: 0.25rem 0.75rem 0.25rem;
    }
    .message-title {
      font-weight: 500;
      font-size: 0.875rem;
      color: white;
      // background-color: #ccc;
      border-radius: 1rem;
      padding: 0.5rem;
      margin: 0.5rem 1rem;
      border: 0.1rem solid white;
      box-shadow: 1.75px 1.75px 1.75px #555;;
    }
  }

  #message-area-container {
    margin-top: 2.5rem;
    display: flex;
    justify-content: center;

    .messagesArea {
      max-width: 40rem;
    }

    ul {
      list-style: none; 
      padding: 0;
      display: flex;
      flex-direction: column;
    }
  }
}

.ind-message-container {
  display: flex;
  flex-direction: column;
  width: 75%;
  margin: 1rem;
  border-radius: 4px;

  &.sender {
    background-color: #e0bfbf;
    align-self: flex-end;
  }

  &.receiver {
    background-color: #ccc;
    align-self: flex-start;
  }
  li {
    display: flex;
    align-items: stretch;
    .message-area-avatar {
      width: 2.5rem;
      height: 2.5rem;
      border-radius: 100%;
      padding: 1rem;
    }

    .message-details {
      padding: 1rem 0.5rem 1rem;
      .username {
        font-weight: 600;
        font-size: 0.875rem;
      }

      .message-text {
        padding: 0.25rem 0;
      }
      
      .message-timestamp {
        color: #555;
        justify-self: flex-end;
      }
    }


  }
}

